# Assignment1-2048

./: .gitignore  .pre-commit-config.yaml  README.md  README1.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: game.py
src/ai/: expectimax.py  mcts.py
src/game/: game.py
tests/: test_game.py
