
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "game-2048"
version = "0.1.0"
description = "2048 assignment project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pygame==2.6.1",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
files = ["."]
